--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="edit_workout_activity_name">Edit workout</string>
     <string name="edit_exercise">Edit exercise</string>
     <string name="schedule">Schedule</string>
+    <string name="select_exercise">Select exercise</string>
 </resources>
