--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="edit_exercise">Edit exercise</string>
     <string name="schedule">Schedule</string>
     <string name="select_exercise">Select exercise</string>
+    <string name="search_exercises">Search exercises</string>
+    <string name="start">Start</string>
+    <string name="edit">Edit exercise</string>
+    <string name="kilo">KG</string>
+    <string name="index">#</string>
+    <string name="weight">weight</string>
 </resources>
