--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">workout</string>
+    <string name="app_name">PlannedWorkout</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
@@ -10,13 +10,13 @@
     <string name="workout_name">Workout name</string>
     <string name="day">Day </string>
     <string name="add">Add</string>
-    <string name="edit_workout_activity_name">Edit workout</string>
-    <string name="edit_exercise">Edit exercise</string>
-    <string name="schedule">Schedule</string>
-    <string name="select_exercise">Select exercise</string>
+    <string name="edit_workout_activity_name">Edit PlannedWorkout</string>
+    <string name="edit_exercise">Edit exercisePojo</string>
+    <string name="schedulePojo">Schedule</string>
+    <string name="select_exercise">Select exercisePojo</string>
     <string name="search_exercises">Search exercises</string>
     <string name="start">Start</string>
-    <string name="edit">Edit exercise</string>
+    <string name="edit">Edit exercisePojo</string>
     <string name="kilo">KG</string>
     <string name="index">#</string>
     <string name="weight">weight</string>
