--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="index">#</string>
     <string name="weight">weight</string>
     <string name="set">Set</string>
+    <string name="current_workout">Current workout</string>
 </resources>
