Edit planned exercises

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="weight">weight</string>
     <string name="set">Set</string>
     <string name="current_workout">Current workout</string>
+    <string name="completed_sets">%1$s / %2$s sets</string>
 </resources>
